--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,8 +12,17 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h2>Users:</h2>
+    <div id="users">
 
+    </div>
+    
+    <h2>Cars:</h2>
+    <div id="cars">
+
+    </div>
+
+    <button id="addCarBtn">Add car to user</button>
 
     <script src="./script.js"></script>
 </body>
